fix: add max-height to collaboration-overlay when on mobile device

--- a/public/css/collaboration.css
+++ b/public/css/collaboration.css
@@ -95,6 +95,10 @@
 	}
 	.grid-container > div {
 		margin-bottom: 10px;
+		max-height: 300px;
+	}
+	.collaboration-overlay {
+		max-height: 300px;
 	}
 }
 
